chore: 세팅수정 warning말고 error뜨게

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,4 +2,10 @@
   <PropertyGroup>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <!-- Cannot convert null literal to non-nullable reference type. -->
+  <!-- 저거 warning 말고 error 뜨게 -->
+  <PropertyGroup>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors>CS8625</WarningsAsErrors>
+  </PropertyGroup>
 </Project>
