chore: 쓸지 안쓸지 모르겠는 addressableLoader 추가하기 (비동기처리 핸들하기 귀찮아서)

--- a/Assets/Scripts/Download.asmdef
+++ b/Assets/Scripts/Download.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Download",
     "rootNamespace": "",
-    "references": [],
+    "references": ["Unity.Addressables", "Unity.ResourceManager"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -12,5 +12,4 @@
     "versionDefines": [],
     "noEngineReferences": false,
     "internalsVisibleTo": [ "Tests" ]
-
 }
