feat: (코드상에서만) 여러개 선택할 수 있게 하기

--- a/Assets/Scripts/Download.asmdef
+++ b/Assets/Scripts/Download.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Download",
     "rootNamespace": "",
-    "references": ["Unity.Addressables", "Unity.ResourceManager", "Unity.InputSystem", "Unity.TextMeshPro", "UniRx"],
+    "references": ["Unity.Addressables", "Unity.ResourceManager", "Unity.InputSystem", "Unity.TextMeshPro", "UniRx", "System.Collections.Immutable"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
